--- a/AlertaExceso.html
+++ b/AlertaExceso.html
@@ -26,9 +26,10 @@
                 <div class="modal-body text-center fs-3 mx-3">
                     Acabas de exceder el presupuesto de servicios
                 </div>
-                <div class="modal-footer justify-content-center border-0">  
-                    <button type="button" class="btn btn-primary w-55">Aceptar</button>
+                <div class="modal-footer justify-content-center border-0">
+                    <button type="button" class="btn btn-primary px-5">Aceptar</button>
                 </div>
+                
             </div>
         </div>
 </body>
