--- a/EliminarGasto.html
+++ b/EliminarGasto.html
@@ -27,9 +27,9 @@
                 <div class="modal-body text-center fs-3 mx-3">
                     ¿Está seguro de que desea eliminar este registro?
                 </div>
-                <div class="modal-footer justify-content-center border-0">
-                    <button type="button" class="btn btn-secondary me-4 w-55" data-bs-dismiss="modal">No</button>
-                    <button type="button" class="btn btn-primary w-55">Sí</button>
+                <div class="modal-footer justify-content-center border-0 d-flex gap-1" >
+                    <button type="button" class="btn btn-secondary flex-grow-1 mx-4" data-bs-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-primary flex-grow-1 mx-4">Sí</button>
                 </div>
             </div>
         </div>
