--- a/AgregarGasto.html
+++ b/AgregarGasto.html
@@ -23,7 +23,7 @@
 
         <div class="modal-content rounded-5 p-4">
         
-            <div class="modal-header encabezado-modal">
+            <div class="modal-header">
                 <h5 class="modal-title w-100 fs-3">Agregar gasto</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -72,9 +72,10 @@
 
                 </form>
             </div>
-            <div class="modal-footer justify-content-center">
-                <button type="button" class="btn btn-secondary me-4 w-55" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary w-55">Aceptar</button>
+
+            <div class="modal-footer d-flex justify-content-center gap-1  ">
+                <button type="button" class="btn btn-secondary flex-grow-1 mx-4" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-primary flex-grow-1 mx-4">Aceptar</button>
             </div>
         </div>
     </div>
