--- a/AgregarUsuario.html
+++ b/AgregarUsuario.html
@@ -3,58 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Usuarios</title>
+    <title>Agregar Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            padding: 20px;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: #f4f4f9;
         }
         .container-box {
             background: white;
-            padding: 20px;
+            padding: 30px;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 320px;
         }
     </style>
 </head>
 <body>
     <div class="container-box">
-        <h2 class="mb-4">Lista de Usuarios</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Nombre</th>
-                    <th>Correo</th>
-                    <th>Rol</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Juan Pérez</td>
-                    <td>juan.perez@example.com</td>
-                    <td>Administrador</td>
-                    <td>
-                        <a href="EditarUsuario.html" class="btn btn-sm btn-primary">Editar</a>
-                        <a href="EliminarUsuario.html" class="btn btn-sm btn-danger">Eliminar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>María López</td>
-                    <td>maria.lopez@example.com</td>
-                    <td>Usuario</td>
-                    <td>
-                        <a href="EditarUsuario.html" class="btn btn-sm btn-primary">Editar</a>
-                        <a href="EliminarUsuario.html" class="btn btn-sm btn-danger">Eliminar</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <a href="AgregarUsuario.html" class="btn btn-success">Agregar Usuario</a>
+        <h2 class="mb-4">Agregar Usuario</h2>
+        <input type="text" class="form-control mb-3" placeholder="Nombre de usuario">
+        <input type="email" class="form-control mb-3" placeholder="Correo electrónico">
+        <select class="form-control mb-3">
+            <option selected disabled> Seleccionar Rol</option>
+            <option>Administrador</option>
+            <option>Usuario</option>
+        </select>
+        <button class="btn btn-primary w-100">Agregar</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
