--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="d-flex">
-        <nav class="sidebar bg-light vh-100 p-3">
+        <nav class="sidebar bg-light vh-100 ">
             <div class="text-center my-3">
                 <img src="/assets/cara.png" alt="User Image" class="rounded-circle" width="100" height="100">
                 <h5 class="mt-2" id="navUserName">Usuario</h5>
